syntax = "proto3";
package accounts_manager;
import "google/protobuf/empty.proto";

enum AccountsManagerOperationResult{
    Ok = 0;
    AccountNotFound = 1;
    TraderNotFound = 2;
    NotEnoughBalance = 3;
    ProcessIdDuplicate = 4;
}

enum UpdateBalanceReason {
    TradingResult = 0;
    BalanceCorrection = 1;
    Deposit = 2;
    Withdrawal = 3;
    WithdrawalCanceled = 4;
    ToppingUp = 5;
    Dividends = 6;
    Bonus = 7;
    Credit = 8;
    Voucher = 9;
}

message AccountMetadataItemGrpcModel{
    string Key = 1;
    string Value = 2;
}

message AccountGrpcModel{
    string Id = 1;
    string TraderId = 2;
    string Currency = 3;
    double Balance = 4;
    uint64 CreateDate = 5;
    uint64 LastUpdateDate = 6;
    bool TradingDisabled = 7;
    string CreateProcessId = 8;
    string TradingGroup = 9;
    string LastUpdateProcessId = 10;
    repeated AccountMetadataItemGrpcModel Metadata = 11;
}

message AccountManagerCreateAccountGrpcRequest{
    string TraderId = 1;
    string Currency = 2;
    string ProcessId = 3;
    optional string TradingGroupId = 4;
    repeated AccountMetadataItemGrpcModel Metadata = 5;
}

message AccountManagerUpdateAccountBalanceGrpcRequest{
     string TraderId = 1;
     string AccountId = 2;
     double Delta = 3;
     string Comment = 4;
     string ProcessId = 5;
     bool AllowNegativeBalance = 6;
     UpdateBalanceReason Reason = 7;
     optional string ReferenceTransactionId = 8;
     bool SameResponseProcessId = 9;
}

message AccountManagerGetTraderIdByAccountIdGrpcRequest{
    string AccountId = 1;
}

message AccountManagerGetClientAccountGrpcRequest{
    string TraderId = 1;
    string AccountId = 2;
}

message AccountManagerGetClientAccountsGrpcRequest{
    string TraderId = 1;
}

message SearchAccounts{
    repeated string TraderIds = 1;
    optional string Currency = 2;
    optional FromToInt64Model Created = 3;
    optional FromToInt64Model Balance = 4;
    optional bool Disabled = 5;
}

message FromToInt64Model{
    optional int64 From = 1;
    optional int64 To = 2;
}

message AccountManagerUpdateTradingDisabledGrpcRequest{
    string TraderId = 1;
    string AccountId = 2;
    bool TradingDisabled = 3;
    string ProcessId = 4;
}

message AccountManagerUpdateTradingGroupGrpcRequest{
    string TraderId = 1;
    string AccountId = 2;
    string NewTradingGroup = 3;
    string ProcessId = 4;
}

message AccountManagerUpdateTradingDisabledGrpcResponse{
    AccountsManagerOperationResult Result = 1;
    optional AccountGrpcModel Account = 2;
}

message AccountManagerUpdateBalanceBalanceGrpcInfo{
    string OperationId = 1;
    AccountGrpcModel Account = 2;
}

message AccountManagerUpdateAccountBalanceGrpcResponse{
    AccountsManagerOperationResult Result = 1;
    optional AccountManagerUpdateBalanceBalanceGrpcInfo UpdateBalanceInfo = 2;
}

message AccountManagerGetClientAccountGrpcResponse{
    AccountsManagerOperationResult Result = 1;
    optional AccountGrpcModel Account = 2;
}

message AccountManagerGetTraderIdByAccountIdGrpcResponse{
    optional string TraderId = 1;
}

message AccountManagerGetAccountsByGroupGrpcRequest{
    string TradingGroup = 1;
}

service AccountsManagerGrpcService {
    rpc CreateAccount(AccountManagerCreateAccountGrpcRequest) returns (AccountGrpcModel);
    rpc GetClientAccount(AccountManagerGetClientAccountGrpcRequest) returns (AccountManagerGetClientAccountGrpcResponse);
    rpc GetClientAccounts(AccountManagerGetClientAccountsGrpcRequest) returns (stream AccountGrpcModel);
    rpc Search(SearchAccounts) returns (stream AccountGrpcModel);
    rpc GetTraderIdByAccountId(AccountManagerGetTraderIdByAccountIdGrpcRequest) returns (AccountManagerGetTraderIdByAccountIdGrpcResponse);
    rpc UpdateClientAccountBalance(AccountManagerUpdateAccountBalanceGrpcRequest) returns (AccountManagerUpdateAccountBalanceGrpcResponse);
    rpc UpdateAccountTradingDisabled(AccountManagerUpdateTradingDisabledGrpcRequest) returns (AccountManagerUpdateTradingDisabledGrpcResponse);
    rpc UpdateAccountTradingGroup(AccountManagerUpdateTradingGroupGrpcRequest) returns (AccountManagerUpdateTradingDisabledGrpcResponse);
    rpc GetTradingGroupAccounts(AccountManagerGetAccountsByGroupGrpcRequest) returns (stream AccountGrpcModel);
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
}